# controllers/look_up/cont_look_up.go
@@ -26,6 +26,7 @@ func NewContLookUp(e *echo.Echo, a idynamic.Usecase) {
 
 	r.Use(midd.JWT)
 	r.POST("", cont.GetData)
+	r.POST("/list", cont.GetLookUpList)
 }
 
 // GetLookUp :
@@ -66,5 +67,46 @@ func (c *ContLookUp) GetData(e echo.Context) error {
 	}
 
 	return appE.Response(http.StatusOK, "", Data)
+
+}
+
+// GetLookUpList :
+// @Summary GetLookUpList Dynamic
+// @Security ApiKeyAuth
+// @Tags LookUp
+// @Produce  json
+// @Param req body models.ParamLookUpList true "req param #changes are possible to adjust the form of the registration form from frontend"
+// @Success 200 {object} app.ResponseModel
+// @Router /api/lookup/list [post]
+func (c *ContLookUp) GetLookUpList(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+	var (
+		// logger = logging.Logger{}
+		appE = tool.Res{R: e} // wajib
+		//valid      validation.Validation // wajib
+		paramquery   = models.ParamLookUpList{} // ini untuk list
+		responseList = models.ResponseModelListLookUp{}
+		err          error
+	)
+
+	httpCode, errMsg := app.BindAndValid(e, &paramquery)
+	// logger.Info(util.Stringify(paramquery))
+	if httpCode != 200 {
+		return appE.ResponseError(http.StatusBadRequest, errMsg, nil)
+	}
+
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+	responseList, err = c.useOption.GetDataLookUpList(ctx, claims, paramquery)
+	if err != nil {
+		return appE.ResponseError(http.StatusInternalServerError, fmt.Sprintf("%v", err), nil)
+	}
+
+	return appE.Response(http.StatusOK, "", responseList)
 
 }
